tests/ui/mismatched_types/issue-112036.rs
struct Foo;

impl Drop for Foo {
    fn drop(self) {} //~ ERROR method `drop` has an incompatible type for trait
}

fn main() {}
